modals fixed on small resolution, closes #44

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -239,6 +239,10 @@ html, body {
 	display: none;
 }
 
+#helpmodal {
+	z-index: 1085;
+}
+
 #helpmodal strong {
 	font-size: 120%;
 }
